# Fluster

./: README.md  SECURITY.md  bun.lockb  components.json  index.html  package.json  tsconfig.json  versions.json  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Rocket.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/assets/: AnnoyingDialog.html  Help.html  Landing.html  Unfinished.html
src-tauri/src/assets/css/: ALllCSS.css
src-tauri/src/assets/storage/: gameserver.lua  join.lua  visit.lua
src-tauri/src/routes/: asset.rs  game.rs  ide.rs  mod.rs  static.rs
src-tauri/src/utils/: appdata.rs  client.rs  mod.rs  network.rs
src/components/screens/: WelcomeScreen.tsx
src/components/tabs/: background-paths.tsx  dashboard.tsx  discovery-screen.tsx  menu-bar.tsx  setup-screen.tsx
src/components/ui/: menubar.tsx  progress.tsx  sonner.tsx
src/hooks/: useVersions.ts  useView.ts
src/interfaces/: ClientCardProps.ts  DashboardProps.ts  DiscoveryProps.ts  ServerInfo.ts  SetupScreenProps.ts  VersionData.ts  VersionItemProps.ts
src/services/: dataService.ts
src/utils/: toast.ts
