[package]
name = "fluster"
version = "0.1.0"
description = "An attempt to make a minimal-like launcher for old versions of Roblox"
authors = ["sbeltranc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluster_api_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rocket = { version = "0.5.1", features = ["http2", "json"] }
tokio = "1.44.2"
reqwest = { version = "0.12.15", features = ["blocking"] }
dirs = "6.0.0"
zip = "2.6.1"
rust-embed = { version = "8.7.0", features = ["rocket"] }
md5 = "0.7.0"
winapi = { version = "0.3.9", features = ["shellapi", "winuser"] }
